# mcp-server-mongo

./: .gitignore  README.md  main.py  pyproject.toml
